Added footer to page

--- a/index.htm
+++ b/index.htm
@@ -109,5 +109,20 @@
                 </div>
             </div>
         </div>
+        <div class="footer">
+            <div class="left">
+                <p style="font-weight: 400" id="headtitle"><span class="blinking" style="font-weight: 800; display: inline;">></span> ThatsZman</p>
+            </div>
+            <div class="right">
+                <a href="index.htm" id="active">Home</a>
+                <a>Projects</a>
+                <a>About</a>
+                <a>CodeSwamp</a>
+                <div class="foot2">
+                    <a>Contact Me</a>
+                    <a href="#header">🠕</a>
+                </div>
+            </div>
+        </div>
     </div>
 </html>
