--- a/index.htm
+++ b/index.htm
@@ -120,7 +120,7 @@
                 <a>CodeSwamp</a>
                 <div class="foot2">
                     <a>Contact Me</a>
-                    <a href="#header">🠕</a>
+                    <a href="#header">🠕t</a>
                 </div>
             </div>
         </div>
