Made changes to footer

--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
     <head>
         <!--Import Files-->
         <link rel="stylesheet" href="css/style.css">
-        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto+Mono:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
         <!--SEO and Meta-->
         <title>Home - ThatsZman</title>
@@ -113,15 +113,16 @@
             <div class="left">
                 <p style="font-weight: 400" id="headtitle"><span class="blinking" style="font-weight: 800; display: inline;">></span> ThatsZman</p>
             </div>
+            <div class="middle">
+                <a style="border: 0px;" href="https://github.com/ThatsZman"><i class="fa fa-github" title="GitHub"></i></a>
+                <a style="border: 0px;"><i class="fa fa-envelope" title="Contact Me"></i></a>
+            </div>
             <div class="right">
                 <a href="index.htm" id="active">Home</a>
                 <a>Projects</a>
                 <a>About</a>
                 <a>CodeSwamp</a>
-                <div class="foot2">
-                    <a>Contact Me</a>
-                    <a href="#header">🠕</a>
-                </div>
+                <a href="#header" style="margin-left: 5px;"><i class="fa fa-arrow-up"></i></a>
             </div>
         </div>
     </div>
