--- a/projects.htm
+++ b/projects.htm
@@ -18,31 +18,25 @@
             </div>
 
             <div class="links">
-                <a href="index.htm" id="active">Home</a>
-                <a href="projects.htm">Projects</a>
+                <a href="index.htm">Home</a>
+                <a href="projects.htm" id="active">Projects</a>
                 <a>About</a>
                 <!--<a>CodeSwamp</a>-->
             </div>
         </div>
 
-        <div class="topcontainer" id="top">
+        <div class="pagehead" id="top">
             <div class="maintext">
-                <p style="font-size: 65px; display: inline;"><span class="blinking" style="font-weight: 800">> </span><div id="changeText" style="display: inline; font-size: 65px;">I do coding.</div></p>
-                <!--Text Loop JS-->
-                <script src="js/topcontainerJS.js"></script>
+                <p style="display: inline;"><span class="blinking" style="font-weight: 800">> </span><div id="changeText" style="display: inline;">Projects</div></p>
             </div>
-            <div class="lowertext">
-                <!--Lower Part-->
-                <a id="greenfade" href="#portfolio">View some of my work.</a>
             </div>
 
         </div>
         
         <div class="content" id="content">
-            <div class="portfolio" id="portfolio">
-                <h1 style="margin-bottom: 15px;"><span style="color: #2AFF00;">> </span>My Work:</h1>
-                <div class="portfoliocontainer" id="portfolio1">
-                    <div class="portfoliobox">
+            <div class="projects" id="projects">
+                <div class="projectscontainer" id="projects1">
+                    <div class="projectsbox">
                         <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
                         <div class="text">
                             <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
@@ -53,61 +47,57 @@
                             <p>A refresh of their old site, Fantasy Football Playoff Pool is a sports betting site.</p>
                         </div>
                     </div>
-                    <!--
-                    <div class="portfoliobox">
-                        <div class="img" style="background-image: url(img/portfolio/ridingelectric.png);"></div>
-                        <div class="text">
-                            <h3 style="text-align: center;">Riding Electric</h3>
-                            <div id="tag">HTML</div>
-                            <div id="tag">CSS</div>
-                            <div id="tag">WordPress</div>
-                            <div id="tag">GFX</div>
-                            <p>A new site for a new electric bike company. Along with coding, I also designed their logos.</p>
-                        </div>
-                    </div>
-                    -->
-                    <div class="portfoliobox">
+                    <div class="projectsbox">
                         <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
                         <div class="text">
-                            <h3 style="text-align: center;">ThatsZman.com</h3>
+                            <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
                             <div id="tag">HTML</div>
                             <div id="tag">CSS</div>
                             <div id="tag">JS</div>
-                            <p>My site! I built everything from scratch--no frameworks required.</p>
+                            <div id="tag">PHP</div>
+                            <p>A refresh of their old site, Fantasy Football Playoff Pool is a sports betting site.</p>
                         </div>
                     </div>
-                    <div class="portfoliobox">
+                    <div class="projectsbox">
+                        <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
+                        <div class="text">
+                            <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
+                            <div id="tag">HTML</div>
+                            <div id="tag">CSS</div>
+                            <div id="tag">JS</div>
+                            <div id="tag">PHP</div>
+                            <p>A refresh of their old site, Fantasy Football Playoff Pool is a sports betting site.</p>
+                        </div>
+                    </div>
+                    <div class="projectsbox">
+                        <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
+                        <div class="text">
+                            <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
+                            <div id="tag">HTML</div>
+                            <div id="tag">CSS</div>
+                            <div id="tag">JS</div>
+                            <div id="tag">PHP</div>
+                            <p>A refresh of their old site, Fantasy Football Playoff Pool is a sports betting site.</p>
+                        </div>
+                    </div>
+                    <div class="projectsbox">
+                        <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
+                        <div class="text">
+                            <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
+                            <div id="tag">HTML</div>
+                            <div id="tag">CSS</div>
+                            <div id="tag">JS</div>
+                            <div id="tag">PHP</div>
+                            <p>A refresh of their old site, Fantasy Football Playoff Pool is a sports betting site.</p>
+                        </div>
+                    </div>
+                    <div class="projectsbox">
                         <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
                         <div class="text">
                             <h3 style="text-align: center;">Want something?</h3>
                             <p>Have something you need to get built?<br><br><a id="normal" href="mailto:thatszman@gmail.com">Reach out to me. ⭢</a></p>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="info">
-                <h1><span style="color: #2AFF00;">> </span>What I am familar with:</h1>
-                <div class="tags">
-                    <p style="font-weight: 500; font-size: 15px;">Coding Languages:</p>
-                    <div id="taglarge" class="hovergreen">HTML</div>
-                    <div id="taglarge" class="hovergreen">CSS</div>
-                    <div id="taglarge" class="hovergreen">Javascript</div>
-                    <div id="taglarge" class="hovergreen">PHP*</div>
-                    <div id="taglarge" class="hovergreen">Wordpress</div>
-                    <div id="taglarge" class="hovergreen">Lua</div>
-                    <br>
-                    <p style="font-weight: 500; font-size: 15px;">Graphic Design Applications:</p>
-                    <div id="taglarge" class="hovergreen">Illustrator</div>
-                    <div id="taglarge" class="hovergreen">Photoshop</div>
-                    <div id="taglarge" class="hovergreen">XD</div>
-                    <br>
-                    <p style="font-weight: 500; font-size: 15px;">Video Editing Applications:</p>
-                    <div id="taglarge" class="hovergreen">Premiere Pro</div>
-                    <div id="taglarge" class="hovergreen">After Effects</div>
-                    <div id="taglarge" class="hovergreen">Final Cut Pro X</div>
-                    <div id="taglarge" class="hovergreen">Media Encoder</div>
-                    <br>
-                    <p style="font-size: 12.5px; font-weight: 300;">*I am still learning!</p>
                 </div>
             </div>
         </div>
@@ -121,8 +111,8 @@
                 <a style="border: 0px;"><i class="fa fa-envelope" title="Contact Me"></i></a>
             </div>
             <div class="right">
-                <a href="index.htm" id="active">Home</a>
-                <a href="projects.htm">Projects</a>
+                <a href="index.htm">Home</a>
+                <a href="projects.htm" id="active">Projects</a>
                 <a href="about.htm">About</a>
                <!--<a>CodeSwamp</a>-->
                 <a href="#header" style="margin-left: 5px;"><i class="fa fa-arrow-up"></i></a>
