Finished projects page

--- a/projects.htm
+++ b/projects.htm
@@ -46,56 +46,51 @@
                             <div id="tag">PHP</div>
                             <p>A refresh of their old site, Fantasy Football Playoff Pool is a sports betting site.</p>
                         </div>
+                        <div class="project-link">
+                            <hr>
+                            <a id="normal" href="http://footballplayoffpool.com/index.php">Head to Site ⭢</a>
+                        </div>
                     </div>
                     <div class="projectsbox">
-                        <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
+                        <div class="img" style="background-image: url(img/portfolio//thatszman.PNG);"></div>
                         <div class="text">
-                            <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
+                            <h3 style="text-align: center">ThatsZman.com</h3>
                             <div id="tag">HTML</div>
                             <div id="tag">CSS</div>
                             <div id="tag">JS</div>
-                            <div id="tag">PHP</div>
-                            <p>A refresh of their old site, Fantasy Football Playoff Pool is a sports betting site.</p>
+                            <div id="tag">Open-Source</div>
+                            <p>My site! I built everything from scratch--no frameworks required.</p>
+                        </div>
+                        <div class="project-link">
+                            <hr>
+                            <a id="normal" href="https://github.com/ThatsZman/ThatsZman.com"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
                         </div>
                     </div>
                     <div class="projectsbox">
                         <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
                         <div class="text">
-                            <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
-                            <div id="tag">HTML</div>
-                            <div id="tag">CSS</div>
-                            <div id="tag">JS</div>
-                            <div id="tag">PHP</div>
-                            <p>A refresh of their old site, Fantasy Football Playoff Pool is a sports betting site.</p>
+                            <h3 style="text-align: center">Web Cleaner</h3>
+                            <div id="tag">Visual Basic</div>
+                            <div id="tag">Batch</div>
+                            <div id="tag">Open-Source</div>
+                            <p>One of my first projects, WebCleaner is a prank script. Check it's <a id="normal" href="https://github.com/ThatsZman/WebCleaner/blob/master/README.md" style="padding: 0px;">README.md file</a> to learn about it's payloads.</p>
+                        </div>
+                        <div class="project-link">
+                            <hr>
+                            <a id="normal" href="https://github.com/ThatsZman/WebCleaner"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
                         </div>
                     </div>
                     <div class="projectsbox">
                         <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
                         <div class="text">
-                            <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
-                            <div id="tag">HTML</div>
-                            <div id="tag">CSS</div>
-                            <div id="tag">JS</div>
-                            <div id="tag">PHP</div>
-                            <p>A refresh of their old site, Fantasy Football Playoff Pool is a sports betting site.</p>
+                            <h3 style="text-align: center">TimeAlert</h3>
+                            <div id="tag">Batch</div>
+                            <div id="tag">Open-Source</div>
+                            <p>A very old project of mine, I never finished it. It was supposed to be a project to limit screen time.</p>
                         </div>
-                    </div>
-                    <div class="projectsbox">
-                        <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
-                        <div class="text">
-                            <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
-                            <div id="tag">HTML</div>
-                            <div id="tag">CSS</div>
-                            <div id="tag">JS</div>
-                            <div id="tag">PHP</div>
-                            <p>A refresh of their old site, Fantasy Football Playoff Pool is a sports betting site.</p>
-                        </div>
-                    </div>
-                    <div class="projectsbox">
-                        <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
-                        <div class="text">
-                            <h3 style="text-align: center;">Want something?</h3>
-                            <p>Have something you need to get built?<br><br><a id="normal" href="mailto:thatszman@gmail.com">Reach out to me. ⭢</a></p>
+                        <div class="project-link">
+                            <hr>
+                            <a id="normal" href="https://github.com/ThatsZman/TimeAlert"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
                         </div>
                     </div>
                 </div>
