Hot fix to add new tabs

--- a/projects.htm
+++ b/projects.htm
@@ -48,7 +48,7 @@
                         </div>
                         <div class="project-link">
                             <hr>
-                            <a id="normal" href="http://footballplayoffpool.com/index.php">Head to Site ⭢</a>
+                            <a id="normal" href="http://footballplayoffpool.com/index.php" target="_blank">Head to Site ⭢</a>
                         </div>
                     </div>
                     <div class="projectsbox">
@@ -63,7 +63,7 @@
                         </div>
                         <div class="project-link">
                             <hr>
-                            <a id="normal" href="https://github.com/ThatsZman/ThatsZman.com"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
+                            <a id="normal" href="https://github.com/ThatsZman/ThatsZman.com" target="_blank"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
                         </div>
                     </div>
                     <div class="projectsbox">
@@ -77,7 +77,7 @@
                         </div>
                         <div class="project-link">
                             <hr>
-                            <a id="normal" href="https://github.com/ThatsZman/WebCleaner"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
+                            <a id="normal" href="https://github.com/ThatsZman/WebCleaner" target="_blank"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
                         </div>
                     </div>
                     <div class="projectsbox">
@@ -90,7 +90,7 @@
                         </div>
                         <div class="project-link">
                             <hr>
-                            <a id="normal" href="https://github.com/ThatsZman/TimeAlert"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
+                            <a id="normal" href="https://github.com/ThatsZman/TimeAlert" target="_blank"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
                         </div>
                     </div>
                 </div>
