Added pictures to projects and index page.

--- a/index.htm
+++ b/index.htm
@@ -43,7 +43,7 @@
                 <h1 style="margin-bottom: 15px;"><span style="color: #2AFF00;">> </span>My Work:</h1>
                 <div class="portfoliocontainer" id="portfolio1">
                     <div class="portfoliobox">
-                        <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
+                        <div class="img" style="background-image: url(img/portfolio/playoffpool.PNG);"></div>
                         <div class="text">
                             <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
                             <div id="tag">HTML</div>
@@ -67,7 +67,7 @@
                     </div>
                     -->
                     <div class="portfoliobox">
-                        <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
+                        <div class="img" style="background-image: url(img/portfolio/thatszman.PNG);"></div>
                         <div class="text">
                             <h3 style="text-align: center;">ThatsZman.com</h3>
                             <div id="tag">HTML</div>
