--- a/projects.htm
+++ b/projects.htm
@@ -37,7 +37,7 @@
             <div class="projects" id="projects">
                 <div class="projectscontainer" id="projects1">
                     <div class="projectsbox">
-                        <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
+                        <div class="img" style="background-image: url(img/portfolio/playoffpool.PNG);"></div>
                         <div class="text">
                             <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
                             <div id="tag">HTML</div>
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                     <div class="projectsbox">
-                        <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
+                        <div class="img" style="background-image: url(img/portfolio/webcleaner.PNG);"></div>
                         <div class="text">
                             <h3 style="text-align: center">Web Cleaner</h3>
                             <div id="tag">Visual Basic</div>
