fix emoji (again...)

--- a/index.htm
+++ b/index.htm
@@ -114,7 +114,7 @@
         <div class="footer">
             <div class="left">
                 <p style="font-weight: 400" id="headtitle"><span class="blinking" style="font-weight: 800; display: inline;">></span> ThatsZman</p>
-                <p style="font-size: 15px" class="foot-marginremover">Built with &#10084;&#65039; and ☕ by ThatsZman</p>
+                <p style="font-size: 15px" class="foot-marginremover">Built with &#10084;&#65039; and &#9749; by ThatsZman</p>
             </div>
             <div class="middle">
                 <a style="border: 0px;" href="https://github.com/ThatsZman"><i class="fa fa-github" title="GitHub"></i></a>
