--- a/projects.htm
+++ b/projects.htm
@@ -1,134 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <!--Import Files-->
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto+Mono:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
+        <!--SEO and Meta-->
+        <title>Home - ThatsZman</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8">
+    </head>
+    <div class="container">
+        <div class="header" id="header">
+            <div class="title">
+                <!--Title-->
+                <p style="font-weight: 400;" id="headtitle"><span class="blinking" style="font-weight: 800; display: inline;">></span> ThatsZman</p>
+            </div>
 
-<head>
-    <!--Import Files-->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Roboto+Mono:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap"
-        rel="stylesheet">
-    <!--SEO and Meta-->
-    <title>Projects - ThatsZman</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
-</head>
-<div class="container">
-    <div class="header" id="header">
-        <div class="title">
-            <!--Title-->
-            <p style="font-weight: 400;" id="headtitle"><span class="blinking"
-                    style="font-weight: 800; display: inline;">></span> ThatsZman</p>
+            <div class="links">
+                <a href="index.htm">Home</a>
+                <a href="projects.htm" id="active">Projects</a>
+                <a>About</a>
+                <!--<a>CodeSwamp</a>-->
+            </div>
         </div>
 
-        <div class="links">
-            <a href="index.htm">Home</a>
-            <a href="projects.htm" id="active">Projects</a>
-            <a>About</a>
-            <!--<a>CodeSwamp</a>-->
+        <div class="pagehead" id="top">
+            <div class="maintext">
+                <p style="display: inline;"><span class="blinking" style="font-weight: 800">> </span><div id="changeText" style="display: inline;">Projects</div></p>
+            </div>
         </div>
-    </div>
-
-    <div class="pagehead" id="top">
-        <div class="maintext">
-            <p style="display: inline;"><span class="blinking" style="font-weight: 800">> </span>
-            <div id="changeText" style="display: inline;">Projects</div>
-            </p>
-        </div>
-    </div>
-
-
-    <div class="content" id="content">
-        <div class="projects" id="projects">
-            <div class="projectscontainer" id="projects1">
-                <div class="projectsbox">
-                    <div class="img" style="background-image: url(img/portfolio/playoffpool.PNG);"></div>
-                    <div class="text">
-                        <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
-                        <div id="tag">HTML</div>
-                        <div id="tag">CSS</div>
-                        <div id="tag">JS</div>
-                        <div id="tag">PHP</div>
-                        <p>A refresh of their old site, Fantasy Football Playoff Pool is a sports betting site.</p>
+        
+        <div class="content" id="content">
+            <div class="projects" id="projects">
+                <div class="projectscontainer" id="projects1">
+                    <div class="projectsbox">
+                        <div class="img" style="background-image: url(img/portfolio/playoffpool.PNG);"></div>
+                        <div class="text">
+                            <h3 style="text-align: center">Fantasy Football Playoff Pool</h3>
+                            <div id="tag">HTML</div>
+                            <div id="tag">CSS</div>
+                            <div id="tag">JS</div>
+                            <div id="tag">PHP</div>
+                            <p>A refresh of their old site, Fantasy Football Playoff Pool is a sports betting site.</p>
+                        </div>
+                        <div class="project-link">
+                            <hr>
+                            <a id="normal" href="http://footballplayoffpool.com/index.php" target="_blank">Head to Site ⭢</a>
+                        </div>
                     </div>
-                    <div class="project-link">
-                        <hr>
-                        <a id="normal" href="http://footballplayoffpool.com/index.php" target="_blank">Head to Site
-                            ⭢</a>
+                    <div class="projectsbox">
+                        <div class="img" style="background-image: url(img/portfolio//thatszman.PNG);"></div>
+                        <div class="text">
+                            <h3 style="text-align: center">ThatsZman.com</h3>
+                            <div id="tag">HTML</div>
+                            <div id="tag">CSS</div>
+                            <div id="tag">JS</div>
+                            <div id="tag">Open-Source</div>
+                            <p>My site! I built everything from scratch--no frameworks required.</p>
+                        </div>
+                        <div class="project-link">
+                            <hr>
+                            <a id="normal" href="https://github.com/ThatsZman/ThatsZman.com" target="_blank"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
+                        </div>
                     </div>
-                </div>
-                <div class="projectsbox">
-                    <div class="img" style="background-image: url(img/portfolio//thatszman.PNG);"></div>
-                    <div class="text">
-                        <h3 style="text-align: center">ThatsZman.com</h3>
-                        <div id="tag">HTML</div>
-                        <div id="tag">CSS</div>
-                        <div id="tag">JS</div>
-                        <div id="tag">Open-Source</div>
-                        <p>My site! I built everything from scratch--no frameworks required.</p>
+                    <div class="projectsbox">
+                        <div class="img" style="background-image: url(img/portfolio/webcleaner.PNG);"></div>
+                        <div class="text">
+                            <h3 style="text-align: center">Web Cleaner</h3>
+                            <div id="tag">Visual Basic</div>
+                            <div id="tag">Batch</div>
+                            <div id="tag">Open-Source</div>
+                            <p>One of my first projects, WebCleaner is a prank script. Check it's <a id="normal" href="https://github.com/ThatsZman/WebCleaner/blob/master/README.md" style="padding: 0px;">README.md file</a> to learn about it's payloads.</p>
+                        </div>
+                        <div class="project-link">
+                            <hr>
+                            <a id="normal" href="https://github.com/ThatsZman/WebCleaner" target="_blank"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
+                        </div>
                     </div>
-                    <div class="project-link">
-                        <hr>
-                        <a id="normal" href="https://github.com/ThatsZman/ThatsZman.com" target="_blank"><i
-                                class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
-                    </div>
-                </div>
-                <div class="projectsbox">
-                    <div class="img" style="background-image: url(img/portfolio/webcleaner.PNG);"></div>
-                    <div class="text">
-                        <h3 style="text-align: center">Web Cleaner</h3>
-                        <div id="tag">Visual Basic</div>
-                        <div id="tag">Batch</div>
-                        <div id="tag">Open-Source</div>
-                        <p>One of my first projects, WebCleaner is a prank script. Check it's <a id="normal"
-                                href="https://github.com/ThatsZman/WebCleaner/blob/master/README.md"
-                                style="padding: 0px;">README.md file</a> to learn about it's payloads.</p>
-                    </div>
-                    <div class="project-link">
-                        <hr>
-                        <a id="normal" href="https://github.com/ThatsZman/WebCleaner" target="_blank"><i
-                                class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
-                    </div>
-                </div>
-                <div class="projectsbox">
-                    <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
-                    <div class="text">
-                        <h3 style="text-align: center">TimeAlert</h3>
-                        <div id="tag">Batch</div>
-                        <div id="tag">Open-Source</div>
-                        <p>A very old project of mine, I never finished it. It was supposed to be a project to limit
-                            screen
-                            time.</p>
-                    </div>
-                    <div class="project-link">
-                        <hr>
-                        <a id="normal" href="https://github.com/ThatsZman/TimeAlert" target="_blank"><i
-                                class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
+                    <div class="projectsbox">
+                        <div class="img" style="background-image: url(img/CToGD7f.jpg);"></div>
+                        <div class="text">
+                            <h3 style="text-align: center">TimeAlert</h3>
+                            <div id="tag">Batch</div>
+                            <div id="tag">Open-Source</div>
+                            <p>A very old project of mine, I never finished it. It was supposed to be a project to limit screen time.</p>
+                        </div>
+                        <div class="project-link">
+                            <hr>
+                            <a id="normal" href="https://github.com/ThatsZman/TimeAlert" target="_blank"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="footer">
-        <div class="left">
-            <p style="font-weight: 400" id="headtitle"><span class="blinking"
-                    style="font-weight: 800; display: inline;">></span> ThatsZman</p>
-            <p style="font-size: 15px" class="foot-marginremover">Built with &#10084;&#65039; and &#9749; by ThatsZman
-            </p>
-        </div>
-        <div class="middle">
-            <a style="border: 0px;" href="https://github.com/ThatsZman"><i class="fa fa-github" title="GitHub"></i></a>
-            <a style="border: 0px;"><i class="fa fa-envelope" title="Contact Me"></i></a>
-        </div>
-        <div class="right">
-            <a href="index.htm">Home</a>
-            <a href="projects.htm" id="active">Projects</a>
-            <a href="about.htm">About</a>
-            <!--<a>CodeSwamp</a>-->
-            <a href="#header" style="margin-left: 5px;"><i class="fa fa-arrow-up"></i></a>
+        <div class="footer">
+            <div class="left">
+                <p style="font-weight: 400" id="headtitle"><span class="blinking" style="font-weight: 800; display: inline;">></span> ThatsZman</p>
+                <p style="font-size: 15px" class="foot-marginremover">Built with &#10084;&#65039; and &#9749; by ThatsZman</p>
+            </div>
+            <div class="middle">
+                <a style="border: 0px;" href="https://github.com/ThatsZman"><i class="fa fa-github" title="GitHub"></i></a>
+                <a style="border: 0px;"><i class="fa fa-envelope" title="Contact Me"></i></a>
+            </div>
+            <div class="right">
+                <a href="index.htm">Home</a>
+                <a href="projects.htm" id="active">Projects</a>
+                <a href="about.htm">About</a>
+               <!--<a>CodeSwamp</a>-->
+                <a href="#header" style="margin-left: 5px;"><i class="fa fa-arrow-up"></i></a>
+            </div>
         </div>
     </div>
-</div>
-
-
 </html>
