Added incompatible page alert.

--- a/index.htm
+++ b/index.htm
@@ -9,6 +9,8 @@
         <title>Home - ThatsZman</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
+        <!--JS Scripts-->
+        <script src="js/incompatpage.js"></script>
     </head>
     <div class="container">
         <div class="header" id="header">
