Removed previous changes and Unsupported Page JS

--- a/index.htm
+++ b/index.htm
@@ -9,8 +9,6 @@
         <title>Home - ThatsZman</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <!--JS Scripts-->
-        <script src="js/incompatpage.js"></script>
     </head>
     <div class="container">
         <div class="header" id="header">
@@ -109,14 +107,14 @@
                     <div id="taglarge" class="hovergreen">Final Cut Pro X</div>
                     <div id="taglarge" class="hovergreen">Media Encoder</div>
                     <br>
-                    <p style="font-size: 12.5px; font-weight: 300;">*I am still learning!</p>
+                    <p style="font-size: 12.5px; font-weight: 300;">*I'm still learning!</p>
                 </div>
             </div>
         </div>
         <div class="footer">
             <div class="left">
                 <p style="font-weight: 400" id="headtitle"><span class="blinking" style="font-weight: 800; display: inline;">></span> ThatsZman</p>
-                <p style="font-size: 15px" class="foot-marginremover">Built with &#10084;&#65039; and &#9749; by ThatsZman</p>
+                <!--<p style="font-size: 15px" class="foot-marginremover">Built with &#10084;&#65039; and &#9749; by ThatsZman</p>-->
             </div>
             <div class="middle">
                 <a style="border: 0px;" href="https://github.com/ThatsZman"><i class="fa fa-github" title="GitHub"></i></a>
