--- a/projects.htm
+++ b/projects.htm
@@ -9,8 +9,6 @@
         <title>Projects - ThatsZman</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <!--JS Scripts-->
-        <script src="js/incompatpage.js"></script>
     </head>
     <div class="container">
         <div class="header" id="header">
@@ -99,7 +97,7 @@
         <div class="footer">
             <div class="left">
                 <p style="font-weight: 400" id="headtitle"><span class="blinking" style="font-weight: 800; display: inline;">></span> ThatsZman</p>
-                <p style="font-size: 15px" class="foot-marginremover">Built with &#10084;&#65039; and &#9749; by ThatsZman</p>
+                <!--<p style="font-size: 15px" class="foot-marginremover">Built with &#10084;&#65039; and &#9749; by ThatsZman</p>-->
             </div>
             <div class="middle">
                 <a style="border: 0px;" href="https://github.com/ThatsZman"><i class="fa fa-github" title="GitHub"></i></a>
