finalize changes for about page

--- a/about.htm
+++ b/about.htm
@@ -19,8 +19,8 @@
 
             <div class="links">
                 <a href="index.htm">Home</a>
-                <a href="projects.htm" id="active">Projects</a>
-                <a>About</a>
+                <a href="projects.htm">Projects</a>
+                <a href="about.htm" id="active">About</a>
                 <!--<a>CodeSwamp</a>-->
             </div>
         </div>
@@ -92,8 +92,8 @@
             </div>
             <div class="right">
                 <a href="index.htm">Home</a>
-                <a href="projects.htm" id="active">Projects</a>
-                <a href="about.htm">About</a>
+                <a href="projects.htm">Projects</a>
+                <a href="about.htm" id="active">About</a>
                <!--<a>CodeSwamp</a>-->
                 <a href="#header" style="margin-left: 5px;"><i class="fa fa-arrow-up"></i></a>
             </div>
