--- a/projects.htm
+++ b/projects.htm
@@ -20,7 +20,7 @@
             <div class="links">
                 <a href="index.htm">Home</a>
                 <a href="projects.htm" id="active">Projects</a>
-                <a>About</a>
+                <a href="about.htm">About</a>
                 <!--<a>CodeSwamp</a>-->
             </div>
         </div>
