--- a/index.htm
+++ b/index.htm
@@ -76,17 +76,11 @@
                             <p>My site! I built everything from scratch--no frameworks required.</p>
                         </div>
                     </div>
-                    <div class="portfoliobox-noimg-text2">
+                    <div class="portfoliobox">
+                        <div class="img" style="background-image: url(img/PIA12348_large.jpg);"></div>
                         <div class="text">
-                            <div class="top">
-                                <h3 style="text-align: center;">Want something?</h3>
-                                <p>Have something you need to get built?<br><br><a id="normal" href="mailto:thatszman@gmail.com">Reach out to me. ⭢</a></p>
-                            </div>
-                            <hr>
-                            <div class="bottom">
-                                <h3>Want to see more of my work?</h3>
-                                <p>Click below to see some of my other work.<br><br><a id="normal" href="projects.htm">Projects Page ⭢</a></p>
-                            </div>
+                            <h3 style="text-align: center;">Want to see more of my work?</h3>
+                            <p>Click below to see some of my other work.<br><br><a id="normal" href="projects.htm">Projects Page ⭢</a></p>
                         </div>
                     </div>
                 </div>
