--- a/projects.htm
+++ b/projects.htm
@@ -46,7 +46,7 @@
                         </div>
                         <div class="project-link">
                             <hr>
-                            <a id="normal" href="http://footballplayoffpool.com/index.php" target="_blank">Head to Site ⭢</a>
+                            <a id="normal" href="http://footballplayoffpool.com/index.php" target="_blank">View Site ⭢</a>
                         </div>
                     </div>
                     <div class="projectsbox">
@@ -62,6 +62,23 @@
                         <div class="project-link">
                             <hr>
                             <a id="normal" href="https://github.com/ThatsZman/ThatsZman.com" target="_blank"><i class="fa fa-github a-icon"></i> | View on GitHub ⭢</a>
+                        </div>
+                    </div>
+                    <div class="projectsbox">
+                        <div class="img" style="background-image: url(img/portfolio/playoffpool.PNG);"></div>
+                        <div class="text">
+                            <h3 style="text-align: center">Riding Electric</h3>
+                            <div id="tag">HTML</div>
+                            <div id="tag">CSS</div>
+                            <div id="tag">WP</div>
+                            <div id="tag">GFX</div>
+                            <p>Riding Electric is a new electric bike company. Along with designing their website, I also created there logos and graphics.</p>
+                        </div>
+                        <div class="project-link">
+                            <hr>
+                            <!--<a id="normal" href="projects/riding-electric.htm">Learn More ⭢</a>-->
+                            <a id="normal" href="google.com"><i class="fa fa-globe a-icon"></i> | Visit Site ⭢</a>
+                            <!--<a id="normal" href="http://footballplayoffpool.com/index.php" target="_blank" style="margin-left: 15px;">View Site ⭢</a>-->
                         </div>
                     </div>
                     <div class="projectsbox">
