--- a/projects.htm
+++ b/projects.htm
@@ -77,8 +77,8 @@
                         <div class="project-link">
                             <hr>
                             <!--<a id="normal" href="projects/riding-electric.htm">Learn More ⭢</a>-->
-                            <a id="normal" href="google.com"><i class="fa fa-globe a-icon"></i> | Visit Site ⭢</a>
-                            <!--<a id="normal" href="http://footballplayoffpool.com/index.php" target="_blank" style="margin-left: 15px;">View Site ⭢</a>-->
+                            <!--<a id="normal" href="google.com"><i class="fa fa-globe a-icon"></i> | View Site ⭢</a>-->
+                            <a id="normal" style="cursor: not-allowed;"><i class="fa fa-exclamation-circle a-icon"></i> | Site Coming Soon</a>
                         </div>
                     </div>
                     <div class="projectsbox">
